[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1.1"
description = "Microservice core packages all in one"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis",
    "sqlalchemy",
    "fastapi",
    "pydantic",
    "uvicorn",
    "aiohttp",
    "psutil",
]
[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    "httpx",
]


[tool.setuptools.packages.find]
where = ["src"]
